Changes after 2.3.7 release:

Brief summary :

- Added graphical Bochs debugger under Win32 host !
  - Thanks for Chourdakis Michael and Bruce Ewing.
- Many fixes in Bochs internal debugger and CPU instrumentation.
- Bugfixes for CPU emulation correctness.

Detailed change log :

- CPU and internal debugger
  - Support for configurable MSR registers emulation, to enable configure with
        --enable-configurable-msrs option
    Look for configuration example in .bochsrc and msrs.def
  - Support new Intel Atom(R) MOVBE instruction, to enable configure with
        --enable-movbe option
  - Support for 1G pages in long mode, to enable configure with
        --enable-1g-pages option
  - Implemented modern BIOSes mode limiting max reported CPUID function
    to 3 using .bochsrc CPU option. The mode is required in order to
    correctly install and boot WinNT.
  - Many bugfixes for CPU emulation correctness (both x86 and x86-64).
  - Updated CPU instrumentation callbacks.
  - Fixed Bochs internal debugger breakpoints/watchpoints handling.

- Configure and compile
  - Added ability to configure CPUID vendor/brand strings through .bochsrc
    (patch from @SF by Doug Reed).
  - Removed Peter Tattam's closed source external debugger interface from
    the code.
  - Added ability to choose Bochs log file name and Bochs debugger log file
    name from Bochs command line (using new -log and -dbglog options)
  - Removed --enable-guest2host-tlb configure option. The option will be
    always enabled for any Bochs configuration.

- BIOS
  - Added S3 (suspend to RAM) ACPI state to BIOS (patch by Gleb Natapov)

- I/O Devices
  - Hard drive / cdrom
    - PACKET-DMA feature now supported by all ATAPI commands
    - ATAPI command 0x1A added (based on the Qemu implementation)
  - I/O APIC
    - implemented I/O APIC device hardware reset
  - sb16
    - Added limited ALSA sound support on Linux (PCM/MIDI output)
    - FM synthesizer now usable with MIDI output (simple piano only)